<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              >


    <include   layout="@layout/toolbar"/>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_login_white">


    <LinearLayout
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        
        <EditText
            android:id="@+id/et_new_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_h"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/img_close"
            android:hint="@string/et_write_pass_new"/>




        </LinearLayout>


        <LinearLayout
            android:layout_margin="10dp"
            android:id="@+id/ll_check_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="visible">



            <EditText
                android:id="@+id/et_new_pass_again"
                android:layout_weight="2.0"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_h"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/img_close"
                android:hint="@string/et_write_pass_again"/>


        </LinearLayout>

    </LinearLayout>

    <com.yipai.tongzhouli.ui.widget.MyFontButton
        android:id="@+id/bt_save"
        android:layout_width="150dp"
        android:layout_height="@dimen/height_h"
        android:text="@string/bt_save"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_back"/>





</LinearLayout>


